glFusion ChangeLog

v1.3.0
------
- Moved hard-coded styles in public_html/layout/nouveau/users/loginform.thtml
  to style.css, dynamically set loginbox width if oauth enabled (Michael/Eric)
- Moved hard coded rating speed limit to configuration (Mark)
- Fixed album re-initialize bug in Media Gallery (Mark)
- Fixed bug where large files were copied twice when using
  Media Gallery FTP upload (Mark)
- Display 404 Error if invalid SID passed to article.php (Mark)
- Added link to Upgrade Checker on upgrade success page. (Mark)
- Several language file fixes and HTML code fixes (Andre)
- Copyright year fix - if year is old than current show
  $copyright_year - current_year (Andre)
- Updated config.html documentation to point to correct Wiki URLs and to
  support new configuration items.
- Added configuration 're-sync' to reset configuration items to the current
  fieldset / sort orders - keeps everything in sync as sites upgrade (Mark)
- Removed Digibug support form Media Gallery
- Updated OAuth 1.0a and 2.0 support for Facebook, Google, Twitter, LinkedIn,
  and Microsoft Live logins (Mark)
- Implemented XSS fixes from v1.2.2.pl4
- Added Terms of Use and Privacy Policy as pages and links in the default
  install of the footer menu, also added link to RSS feed (Tracker#564) (Eric)
- Added optional menu link highlighting when on a given page, see
  public_html/layout/nouveau/functions.php to activate (Tracker#200) (Eric)
- Updated documentation links for default permissions (Tracker#720) (Eric)
- Added missing help-icon image to default permissions configs (Tracker#720) (Mark)
- Fixed hard-coded language reference in Media Gallery (Tracker#579) (Eric)
- Remove duplicate blogroll block from default content install (Eric)
- Auto translations block image tags now validate to xhtml 1.0 (Eric)
- Keep UTF-8 checkbox on same row in IE9 in the installer (Eric)
- Fixed visited documentation link disappearing (white text on white bg) (Eric)