@@ -2,6 +2,7 @@ glFusion ChangeLog
 
 v1.3.0
 ------
+- Added social auth moorotator image to default content (Michael/Eric)
 - Moved hard-coded styles in public_html/layout/nouveau/users/loginform.thtml
   to style.css, dynamically set loginbox width if oauth enabled (Michael/Eric)
 - Moved hard coded rating speed limit to configuration (Mark)
